@@ -23,12 +23,13 @@ def float_to_string(value):
     """Converts float to nice string representing the float. The
     resulting string should always be 10 chars or smaller."""
     try:
-        float(value)
+        float_value = float(value)
     except (TypeError, ValueError):
         # It is not a number so we just pass it on.
         return value
-    if (0 < abs(value) < 0.01) or (abs(value) >= 1000000000):
-        return '%.2e' % value
-    if abs(value) >= 10000000:
-        return '%.0f' % value
-    return '%.2f' % value
+    abs_float_value = abs(float_value)
+    if (0 < abs_float_value < 0.01) or (abs_float_value >= 1000000000):
+        return '%.2e' % float_value
+    if abs_float_value >= 10000000:
+        return '%.0f' % float_value
+    return '%.2f' % float_value
